第三次同步1.21.1